# cspuz_core

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build_cspuz_solver_backend.sh  build_emcc  coverage.sh  format.sh  pyproject.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: fuzz.yml  test.yml
cspuz_core/: Cargo.toml  build.rs
cspuz_core/lib/: glucose_bridge.cpp  glucose_bridge.h
cspuz_core/src/: arithmetic.rs  config.rs  csp.rs  csp_repr.rs  custom_constraints.rs  domain.rs  encoder.rs  integration.rs  lib.rs  norm_csp.rs  normalizer.rs  parser.rs  sat.rs  util.rs
cspuz_core/src/backend/: cadical.rs  external.rs  glucose.rs  glucose_rs.rs  mod.rs
cspuz_core/src/csp/: mod.rs  repr.rs  test_utils.rs
cspuz_core/src/encoder/: direct.rs  log.rs  mixed.rs  mod.rs  order.rs
cspuz_core/src/integration/tests/: fuzz.rs  mod.rs
cspuz_core/src/norm_csp/: mod.rs  test_utils.rs
cspuz_core/src/propagators/: graph_division.rs  mod.rs  order_encoding_linear.rs
cspuz_core_python/: Cargo.toml
cspuz_core_python/src/: lib.rs
cspuz_rs/: Cargo.toml
cspuz_rs/src/: complex_constraints.rs  different_shape.rs  generator.rs  graph.rs  hex.rs  lib.rs  polyomino.rs  serializer.rs  solver.rs  test_utils.rs
cspuz_rs/src/generator/: grid.rs  mod.rs
cspuz_rs/src/solver/: constraints.rs  mod.rs  ndarray.rs  traits.rs
cspuz_rs/src/solver2/: constraints.rs  mod.rs  ndarray.rs  traits.rs
cspuz_rs_puzzles/: Cargo.toml
cspuz_rs_puzzles/src/: lib.rs  penpa_editor.rs  polyomino.rs  util.rs
cspuz_rs_puzzles/src/puzzles/: akari.rs  akari_regions.rs  akari_rgb.rs  akichiwake.rs  aqre.rs  aquapelago.rs  aquarium.rs  araf.rs  archipelago.rs  armyants.rs  ayeheya.rs  balance_loop.rs  balloon.rs  barns.rs  battleship.rs  bdwalk.rs  bosanowa.rs  bramble.rs  canalview.rs  castle_walker.rs  castle_wall.rs  cave.rs  chainedb.rs  chocobanana.rs  chocona.rs  circlesquare.rs  city_space.rs  cocktail.rs  coffeemilk.rs  compass.rs  context.rs  coral.rs  country_road.rs  creek.rs  cross_border_parity_loop.rs  cross_the_streams.rs  crosswall.rs  curvedata.rs  dbchoco.rs  disco.rs  (+135 more)
cspuz_solver_backend/: Cargo.toml
cspuz_solver_backend/src/: board.rs  lib.rs  testing.rs  uniqueness.rs
cspuz_solver_backend/src/puzzle/: akari.rs  akari_regions.rs  akari_rgb.rs  akichiwake.rs  aqre.rs  aquapelago.rs  aquarium.rs  araf.rs  archipelago.rs  armyants.rs  ayeheya.rs  balance_loop.rs  balloon.rs  barns.rs  battleship.rs  bdwalk.rs  bosanowa.rs  bramble.rs  canalview.rs  castle_walker.rs  castle_wall.rs  cave.rs  chainedb.rs  chocobanana.rs  chocona.rs  circlesquare.rs  city_space.rs  cocktail.rs  coffeemilk.rs  compass.rs  context.rs  coral.rs  country_road.rs  creek.rs  cross_border_parity_loop.rs  cross_the_streams.rs  crosswall.rs  curvedata.rs  dbchoco.rs  disco.rs  (+131 more)
tests/: test_cspuz_solver_backend.js
tools/: add_backend_tests.py  check_puzzles_order.py  coverage.sh
util/: emcc_wrapper
