[workspace]

members = [
    "cspuz_core",
    "cspuz_core_python",
    "cspuz_rs",
    "cspuz_rs_macro",
    "cspuz_rs_puzzles",
    "cspuz_solver_backend",
]

default-members = [
    "cspuz_core",
    "cspuz_rs",
    "cspuz_rs_macro",
    "cspuz_rs_puzzles",
    "cspuz_solver_backend",
]

resolver = "2"
