[package]
name = "cspuz_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cspuz_core"
crate-type = ["lib"]

[features]
default = ["csp-extra-constraints", "parser", "cli", "backend-external", "backend-cadical"]
sat-analyzer = []
parser = ["dep:nom"]
cli = ["parser", "dep:getopts"]
backend-external = []
backend-cadical = []

# Enable support for extra CSP constraints which are not used in puzzle solvers.
csp-extra-constraints = []

[dependencies]
getopts = { version = "0.2", optional = true }
nom = { version = "7.0.0", optional = true }

[build-dependencies]
cc = "=1.2.1"
