[package]
name = "cspuz_rs_puzzles"
version = "0.1.0"
edition = "2021"

[dependencies]
cspuz_rs = { path = "../cspuz_rs", default-features = false }
cspuz_core = { path = "../cspuz_core", default-features = false }

[lints.clippy]
# For better readability, allow loops like `for y in 0..height`
needless_range_loop = "allow"
