[package]
name = "cspuz_solver_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "cspuz_solver_backend"
crate-type = ["cdylib", "lib"]

[dependencies]
cspuz_rs = { path = "../cspuz_rs", default-features = false, features = ["backend-glucose-rs"] }
cspuz_rs_puzzles = { path = "../cspuz_rs_puzzles", default-features = false }

[dev-dependencies]
cspuz_rs = { path = "../cspuz_rs", default-features = false, features = ["test-support", "backend-glucose-rs"] }

[lints.clippy]
# For better readability, allow loops like `for y in 0..height`
needless_range_loop = "allow"
